@@ -2,3 +2,4 @@
 - xhamster - fix playback (play h264 streams instead of av1)
 - eroticage - fix playback (xhmaster streams)
 - pornhoarder - fix playback (select video host)
+- awmnet - fix playback (xhmaster streams)
